2007-05-28  Joel Brobecker  <brobecker@adacore.com>

	* solib-aix5.c: Delete.
	* Makefile.in (solib-aix5.o): Delete rule.

2007-05-23  Daniel Jacobowitz  <dan@codesourcery.com>

	* breakpoint.h (enum bpstat_what_main_action): Remove
	BPSTAT_WHAT_THROUGH_SIGTRAMP.
	* infrun.c (process_event_stop_test): Do not check for it.

2007-05-22  Chris Dearman  <chris@mips.com>
            Maciej W. Rozycki  <macro@mips.com>

	* ser-unix.c (show_serial_hwflow): New function.
	(hardwire_raw): Add hardware flow control support.
	(_initialize_ser_hardwire): Add "set/show remoteflow".
	* Makefile.in (ser-unix.o): Depend on $(gdbcmd_h).
	* NEWS: Document the new command.

2007-05-21  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/i386/tm-linux.h (sys_quotactl): Do not define.
	* configure.ac (sys_quotactl, START_INFERIOR_TRAPS_EXPECTED): Do not
	define for i[[3456]]86-*-linux* native configurations.
	* config.in, configure: Regenerate.

2007-05-19  Joel Brobecker  <brobecker@adacore.com>

	* rs6000-nat.c (xcoff_relocate_symtab): Do nothing if debugging
	a core file. Add comment in the function description.

2007-05-18  Caroline Tice  <ctice@apple.com>

	* c-valprint.c (c_value_print):  If the initialized field of the
	value struct is 0, print out "[uninitialized]" before the value.
	* dwarf2expr.c (execute_stack_op): Initialize ctx->initialized field; 
	allow DW_OP_GNU_uninit as legal op following a DW_OP_reg op or a 
	DW_OP_regx op; add case for DW_OP_GNU_uninit and update
	ctx->initialized appropriately. Verify no location op follows
	DW_OP_GNU_uninit.
	* dwarf2expr.h (struct dwarf_expr_context): New field, initialized.
	* dwarf2loc.c (dwarf2_evaluate_loc_desc): Add call to 
	set_value_initialized.
	* dwarf2read.c (dwarf_stack_op_name): Add case for DW_OP_GNU_uninit.
	(decode_locdesc): Add case for DW_OP_GNU_uninit.
	* value.c (struct value):  New field, initialized.
	(allocate_value): Initialize new field.
	(set_value_initialized): New function.